Fixing errors when connecting to Kerio Connect 8.x